--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
         const idToken = await auth.currentUser.getIdToken();
 
         // 2. Kirim Request ke Backend Localhost
-        const response = await fetch('http://localhost:3000/api/reservations', {
+        const response = await fetch('/api/reservations', ...{
             method: 'POST',
             headers: {
                 'Content-Type': 'application/json',
