--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
 
             // 4. Buka Link WhatsApp (Ganti nomornya dengan nomor admin kamu)
             const phoneNumber = "6285864855878"; // Nomor kamu yg ada di tombol request song tadi
-            const url = `https://wa.me/6285864855878';
+            const url = `https://wa.me/${phoneNumber}?text=${message}`;
 
             // Buka di tab baru
             window.open(url, '_blank');
